Allow attach profiler to integration test
Change-Id: I0d9093bb9b51645747499f0a2da23224e5f58f0d